# thegraph-gql-utils

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  README.rst  pyproject.toml  readthedocs.yaml
docs/: conf.py  index.rst  requirements-docs.txt  requirements.txt
docs/api/: modules.rst  thegraph_gql_utils.rst
src/gql_utils/: visitors.py
src/thegraph_gql_utils/: __init__.py  misc.py  tools.py  visitors.py
tests/tools/: test_build_variable_definitions.py  test_extract_root_queries.py  test_factorize.py  test_insert_variables.py  test_prune_arguments.py  test_remove_aliases.py  test_remove_default_values.py  test_remove_query_name.py  test_remove_unknown_arguments.py  test_remove_values.py  test_sort.py  test_substitute_fragments.py  test_substitute_variables.py
